<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/skyBlue">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="22dp"
        android:textSize="24dp"

        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tetrahedral"
        android:layout_width="150dp"
        android:layout_height="133dp"
        android:layout_below="@+id/appName"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/tetrahedral" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:layout_below="@+id/tetrahedral"

        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/shapeName"
            android:paddingTop="11dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title2"
        android:layout_marginTop="62dp"
        android:layout_marginLeft="30dp"

        android:background="@drawable/white_rectangle"



        android:text="@string/shape"
        android:textSize="18dp"
        android:textColor="@color/gray"
            android:textAlignment="center"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shapeName"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/white_rectangle"

        android:text="@string/result"
        android:textAlignment="center"
            android:textSize="18sp"
        android:textColor="@color/gray"
            android:paddingTop="11dp"
        />
    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/result"
        android:layout_marginBottom="-100dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/green_rectangle"

                android:id="@+id/backBtn"
                android:onClick="handler"
                />

        <TextView
            android:layout_width="76dp"
            android:layout_height="33dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:layout_marginStart="129dp"
            android:layout_marginTop="11dp"

            android:layout_marginEnd="125dp"
            android:layout_marginBottom="11dp"

            android:text="@string/button2"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="24dp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>